--- a/basic/styles.css
+++ b/basic/styles.css
@@ -1,5 +1,4 @@
-html,
-body {
+.card {
   background-color: black !important;
   color: white;
   margin: 0 !important;
@@ -14,6 +13,7 @@ body {
 .note {
   margin: 1rem;
 }
+
 .mobile .note {
   margin: 0.8rem;
 }
@@ -26,12 +26,13 @@ body {
 
 .front {
   background-color: #181919;
-  border-radius: 1rem 1rem 0 0;
+  border-radius: 1rem;
 }
 
 .back {
+  margin-top: 1rem;
   background-color: #1f2121;
-  border-radius: 0 0 1rem 1rem;
+  border-radius: 1rem;
 }
 
 .header {
@@ -55,6 +56,11 @@ body {
   border-radius: 1.5rem;
   border: 1.5px solid #494f4f;
   right: 0.5rem;
+  color: #05c6fc;
+}
+
+.cloze {
+  font-weight: bold;
   color: #05c6fc;
 }
 
