--- a/basic (and reversed card)/styles.css
+++ b/basic (and reversed card)/styles.css
@@ -26,13 +26,12 @@
 
 .front {
   background-color: #181919;
-  border-radius: 1rem;
+  border-radius: 1rem 1rem 0 0;
 }
 
 .back {
-  margin-top: 1rem;
   background-color: #1f2121;
-  border-radius: 1rem;
+  border-radius: 0 0 1rem 1rem;
 }
 
 .header {
@@ -56,11 +55,6 @@
   border-radius: 1.5rem;
   border: 1.5px solid #494f4f;
   right: 0.5rem;
-  color: #05c6fc;
-}
-
-.cloze {
-  font-weight: bold;
   color: #05c6fc;
 }
 
