--- a/basic/styles.css
+++ b/basic/styles.css
@@ -51,6 +51,7 @@
 .tag {
   font-size: 0.8rem;
   padding: 0.4rem 0.8rem;
+  margin: 0 0.1rem;
   display: inline-block;
   border-radius: 1.5rem;
   border: 1.5px solid #494f4f;
